@@ -1,3 +1,9 @@
+2012-03-28  Aurelien Buhrig  <aurelien.buhrig.gcc@gmail.com>
+
+	PR middle-end/51893
+	* expmed.c (store_bit_field_1): Fix wordnum value for big-endian
+	targets.
+
 2012-03-28  Georg-Johann Lay  <avr@gjlay.de>
 
 	Backport from 2012-03-28 mainline r185907.
